# InfraBlankExpeiriments

./: README.md
.github/workflows/: main.yml
aws-python-project/: handler.py  index.ipynb  package-lock.json  package.json  serverless.yml
dbtexp/: pyproject.toml
dbtexp/gdbtexp/: dbt_project.yml  index.ipynb  index.py
dbtexp/gdbtexp/models/gsample/: foo.yml  foo_exec.sql
meltanoexp/gexpv1/: pyproject.toml
meltanoexp/gexpv1/dbt_orchestration/: meltano.yml
meltanoexp/gexpv1/gexpv3/: README.md  meltano.yml
meltanoexp/gsamplev3/: meltano.yml
meltanoexpv1/gexpv2/: meltano.yml
meltanoexpv1/gsamplev1/: meltano.yml
meltanoexpv1/gsamplev1/extract/: values.csv
meltanoexpv1/gsamplev2/: meltano.yml
meltanoexpv1/gsamplev3/transform/models/tap_github/: authors.sql
meltanoexpv2/airflowexp/: meltano.yml
