[tool.poetry]
name = "gexpv1"
version = "0.1.0"
description = ""
authors = ["Rajiv Mehta <rajiv.mehta@live.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
meltano = "^2.15.3"
pgcli = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
